update from parts

--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>customer_service_system</title>
+    <title>story_upload</title>
 </head>
 
 <body>
     <noscript>
-        <strong>We're sorry but customer_service_system doesn't work properly without JavaScript enabled. Please enable
+        <strong>We're sorry but story_upload_system doesn't work properly without JavaScript enabled. Please enable
             it to continue.</strong>
     </noscript>
     <div id="app"></div>
