--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>story_upload</title>
+    <style>
+        html {
+            font-size: 62.5%;
+        }
+    </style>
 </head>
 
 <body>
