#11 header cording pc

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,12 @@
     <style>
         html {
             font-size: 62.5%;
+            color: #666666;
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
         }
     </style>
 </head>
